--- a/basics/app.css
+++ b/basics/app.css
@@ -1,8 +1,21 @@
-body {background: url(https://images.unsplash.com/photo-1472491235688-bdc81a63246e?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=0e00cfe152dd60abf47bef573bb3ba29);
+body {background: url(https://images.unsplash.com/photo-1470246973918-29a93221c455?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=6fa5fb4a47389121c089305d4997505e);
         background-size: cover;
         background-position: center;
-    font-family: Lato;}
+        font-family: Lato;
+        color: white;}
 
+html {height: 100%;}
 
 #content {text-align: center;
-           padding-top: 25%;}
+          padding-top: 25%;
+          text-shadow: 0px 4px 3px red;
+          text-shadow: 0px 8px 13px orange;
+          text-shadow: 0px 18px 23px yellow;
+}
+           
+h1 {font-weight: 700;
+    font-size: 5em;}
+
+hr{ width: 400px;
+    border-top: 1px solid #f8f8f8;
+    border-bottom: 1px solid rgb(0,0,0,.2);}
